--- a/index.html
+++ b/index.html
@@ -382,6 +382,10 @@
       {id:2, img:'images/cinturon2.jpg', title:'Cinturón Café Con Hebilla Dorada', desc:'Piel curtida, acabado vintage, perfecto con camisas blancas. Ancho 3.8 cm.', available:true},
       {id:3, img:'images/cinturon3.jpg', title:'Cinturón Trenzado Stretch', desc:'Comodidad y estilo; se adapta a la cintura. Material resistente y fácil de limpiar.', available:false},
       {id:4, img:'images/cinturon4.jpg', title:'Cinturón Ejecutivo Slim', desc:'Perfil delgado para pantalones de vestir. Hebilla minimalista.', available:true},
+      {id:4, img:'images/cinturon4.jpg', title:'Cinturón Ejecutivo Slim', desc:'Perfil delgado para pantalones de vestir. Hebilla minimalista.', available:true},{id:1, img:'images/cinturon1.jpg', title:'Cinturón Clásico Piel Negra', desc:'Hecho a mano en piel vacuna. Hebilla acero inoxidable. Ancho 3.5 cm. Ideal para uso diario.', available:true},
+      {id:2, img:'images/cinturon2.jpg', title:'Cinturón Café Con Hebilla Dorada', desc:'Piel curtida, acabado vintage, perfecto con camisas blancas. Ancho 3.8 cm.', available:true},
+      {id:3, img:'images/cinturon3.jpg', title:'Cinturón Trenzado Stretch', desc:'Comodidad y estilo; se adapta a la cintura. Material resistente y fácil de limpiar.', available:false},
+      {id:4, img:'images/cinturon4.jpg', title:'Cinturón Ejecutivo Slim', desc:'Perfil delgado para pantalones de vestir. Hebilla minimalista.', available:true},
     ];
     
 
