--- a/index.html
+++ b/index.html
@@ -369,15 +369,15 @@
     const productos = [
       {id:1, img:'1.jpg', title:'Cinturón con hebilla de corazon', desc:'Hecho a mano en piel vacuna. Hebilla acero inoxidable. Ancho 3.5 cm. Ideal para uso diario.', available:true},
       {id:2, img:'2.jpg', title:'Cinturón hebilla de moño con dije ', desc:'Hebilla dorada de forma rectangular adornada con diseño de moño y pedrería cristalina. Elaborado en vinil color camel, este accesorio de diseño fino y elegante es ideal para cualquier atuendo formal o casual. Este accesorio se trabaja en distintos colores.', available:true},
-      {id:3, img:'images/cinturon3.jpg', title:'Cinturón Trenzado Stretch', desc:'Comodidad y estilo; se adapta a la cintura. Material resistente y fácil de limpiar.', available:false},
-      {id:4, img:'images/cinturon4.jpg', title:'Cinturón Ejecutivo Slim', desc:'Perfil delgado para pantalones de vestir. Hebilla minimalista.', available:true},
-      {id:1, img:'images/cinturon1.jpg', title:'Cinturón Clásico Piel Negra', desc:'Hecho a mano en piel vacuna. Hebilla acero inoxidable. Ancho 3.5 cm. Ideal para uso diario.', available:true},
-      {id:2, img:'images/cinturon2.jpg', title:'Cinturón Café Con Hebilla Dorada', desc:'Piel curtida, acabado vintage, perfecto con camisas blancas. Ancho 3.8 cm.', available:true},
-      {id:3, img:'images/cinturon3.jpg', title:'Cinturón Trenzado Stretch', desc:'Comodidad y estilo; se adapta a la cintura. Material resistente y fácil de limpiar.', available:false},
-      {id:4, img:'images/cinturon4.jpg', title:'Cinturón Ejecutivo Slim', desc:'Perfil delgado para pantalones de vestir. Hebilla minimalista.', available:true},
-      {id:1, img:'images/cinturon1.jpg', title:'Cinturón Clásico Piel Negra', desc:'Hecho a mano en piel vacuna. Hebilla acero inoxidable. Ancho 3.5 cm. Ideal para uso diario.', available:true},
-      {id:2, img:'images/cinturon2.jpg', title:'Cinturón Café Con Hebilla Dorada', desc:'Piel curtida, acabado vintage, perfecto con camisas blancas. Ancho 3.8 cm.', available:true},
-      {id:3, img:'images/cinturon3.jpg', title:'Cinturón Trenzado Stretch', desc:'Comodidad y estilo; se adapta a la cintura. Material resistente y fácil de limpiar.', available:false},
+      {id:3, img:'3.jpg', title:'Cinturón Trenzado Stretch', desc:'Comodidad y estilo; se adapta a la cintura. Material resistente y fácil de limpiar.', available:false},
+      {id:4, img:'4.jpg', title:'Cinturón Ejecutivo Slim', desc:'Perfil delgado para pantalones de vestir. Hebilla minimalista.', available:true},
+      {id:1, img:'5.jpg', title:'Cinturón Clásico Piel Negra', desc:'Hecho a mano en piel vacuna. Hebilla acero inoxidable. Ancho 3.5 cm. Ideal para uso diario.', available:true},
+      {id:2, img:'6.jpg', title:'Cinturón Café Con Hebilla Dorada', desc:'Piel curtida, acabado vintage, perfecto con camisas blancas. Ancho 3.8 cm.', available:true},
+      {id:3, img:'7.jpg', title:'Cinturón Trenzado Stretch', desc:'Comodidad y estilo; se adapta a la cintura. Material resistente y fácil de limpiar.', available:false},
+      {id:4, img:'8.jpg', title:'Cinturón Ejecutivo Slim', desc:'Perfil delgado para pantalones de vestir. Hebilla minimalista.', available:true},
+      {id:1, img:'9.jpg', title:'Cinturón Clásico Piel Negra', desc:'Hecho a mano en piel vacuna. Hebilla acero inoxidable. Ancho 3.5 cm. Ideal para uso diario.', available:true},
+      {id:2, img:'10.jpg', title:'Cinturón Café Con Hebilla Dorada', desc:'Piel curtida, acabado vintage, perfecto con camisas blancas. Ancho 3.8 cm.', available:true},
+      {id:3, img:'11.jpg', title:'Cinturón Trenzado Stretch', desc:'Comodidad y estilo; se adapta a la cintura. Material resistente y fácil de limpiar.', available:false},
       {id:4, img:'images/cinturon4.jpg', title:'Cinturón Ejecutivo Slim', desc:'Perfil delgado para pantalones de vestir. Hebilla minimalista.', available:true},{id:1, img:'images/cinturon1.jpg', title:'Cinturón Clásico Piel Negra', desc:'Hecho a mano en piel vacuna. Hebilla acero inoxidable. Ancho 3.5 cm. Ideal para uso diario.', available:true},
       {id:2, img:'images/cinturon2.jpg', title:'Cinturón Café Con Hebilla Dorada', desc:'Piel curtida, acabado vintage, perfecto con camisas blancas. Ancho 3.8 cm.', available:true},
       {id:3, img:'images/cinturon3.jpg', title:'Cinturón Trenzado Stretch', desc:'Comodidad y estilo; se adapta a la cintura. Material resistente y fácil de limpiar.', available:false},
@@ -536,3 +536,4 @@
   </script>
 </body>
 </html>
+
